--- a/Doodle Jump.vcxproj
+++ b/Doodle Jump.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="src\Platform.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
+    <ClCompile Include="src\Score.cpp" />
     <ClCompile Include="src\Settings.cpp" />
     <ClCompile Include="src\World.cpp" />
   </ItemGroup>
@@ -49,6 +50,7 @@
     <ClInclude Include="include\Platform.h" />
     <ClInclude Include="include\Player.h" />
     <ClInclude Include="include\Renderer.h" />
+    <ClInclude Include="include\Score.h" />
     <ClInclude Include="include\Settings.h" />
     <ClInclude Include="include\World.h" />
   </ItemGroup>
