--- a/Doodle Jump.vcxproj.filters
+++ b/Doodle Jump.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="src\Collision.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\Score.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Game.h">
@@ -105,6 +108,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="include\Collision.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Score.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
