Add sounds for collisions

--- a/Doodle Jump.vcxproj.filters
+++ b/Doodle Jump.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="src\Score.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\Sound.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Game.h">
@@ -111,6 +114,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="include\Score.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Sound.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
