--- a/Doodle Jump.vcxproj
+++ b/Doodle Jump.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Score.cpp" />
     <ClCompile Include="src\Settings.cpp" />
+    <ClCompile Include="src\Sound.cpp" />
     <ClCompile Include="src\World.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -52,6 +53,7 @@
     <ClInclude Include="include\Renderer.h" />
     <ClInclude Include="include\Score.h" />
     <ClInclude Include="include\Settings.h" />
+    <ClInclude Include="include\Sound.h" />
     <ClInclude Include="include\World.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
