--- a/Doodle Jump.vcxproj.filters
+++ b/Doodle Jump.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="src\Sound.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\UI.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Game.h">
@@ -117,6 +120,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="include\Sound.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="include\UI.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
