Use same pointer instance for normal and broken platforms

--- a/game/settings.json
+++ b/game/settings.json
@@ -1,7 +1,7 @@
 {
    "Assets" : {
-      "highscore" : 0,
-      "name" : "BlackyDrum"
+      "highscore" : 43076,
+      "name" : "Blacky"
    },
    "Settings" : null
 }
